# trigger-attack

./: LICENSE  README.md  TODO.md  hw5-v2.ipynb  run_tests.sh  setup.cfg
test/: tests.py
tests/: constants.py  embeddings_analyzer_test.py  losses_tests.py  preprocessing_qa_test.py  preprocessing_sc_test.py  preprocessing_tests.py  tools.py  torch_dataset_test.py  trigger_dataset_test.py  trigger_initializer_test.py  trigger_models_test.py  trigger_reconstructor_test.py  trojai_test.py
tests/losses/: losses_ner_test.py  losses_qa_test.py  losses_sc_test.py
tests/losses/.tmp/.cache/json/default-7d7ed6d4ed3a1c56/0.0.0/ac0ca5f5289a6cf108e706efcf040422dbbfa8e658dee6a819f20d76bb84d26b/: json-train.arrow
tests/preprocessing/: preprocessing_ner_test.py  preprocessing_qa_test.py  preprocessing_sc_test.py  torch_dataset_test.py
trigger_attack/: constants.py  embeddings_analyzer.py  search_fn.py  trigger.py  trigger_dataset.py  trigger_init_fn.py  trigger_initializer.py  trigger_inversion_models.py  trigger_models.py  trigger_reconstructor.py  triggered_dataset.py
trigger_attack/loss_functions/: ner.py  qa.py  sc.py  trigger_loss.py
trigger_attack/preprocessing/: dataset_preprocessor.py  ner.py  qa.py  sc.py  tools.py  torch_triggered_dataset.py
trojai_submission/: configure_tools.py  data_tools.py  detector.def  detector.py  metaparameters.json  metaparameters_schema.json  results.ipynb  source_dataset_extractor.py  submission_constants.py  submission_tools.py
(+5 files in other folders)
