
[metadata]
name = trigger_attack
version = 0.0.1
author = Francisco Utrera
author_email = francisco.utrera@outlook.com
description = For generating backdoors triggers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trigger-attack/trigger-attack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 2-Clause License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True